changes from phone

--- a/projects/database_ncis_and_census_data/explore.ipynb
+++ b/projects/database_ncis_and_census_data/explore.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "metadata": {
-    "trusted": false
+    "trusted": true
    },
    "id": "fff08c2a",
    "cell_type": "code",
@@ -14,38 +14,39 @@
    "metadata": {
     "trusted": true
    },
+   "id": "56bb6034",
    "cell_type": "code",
-   "source": "###test",
-   "execution_count": 1,
-   "outputs": []
-  },
-  {
-   "metadata": {
-    "trusted": false
-   },
-   "id": "14a98335",
-   "cell_type": "code",
-   "source": "df_gun = pd.read_csv('gun_data.csv')",
+   "source": "###test, did the changes make it?",
    "execution_count": 2,
    "outputs": []
   },
   {
    "metadata": {
-    "trusted": false
+    "trusted": true
+   },
+   "id": "14a98335",
+   "cell_type": "code",
+   "source": "df_gun = pd.read_csv('gun_data.csv')",
+   "execution_count": 3,
+   "outputs": []
+  },
+  {
+   "metadata": {
+    "trusted": true
    },
    "id": "812d4e84",
    "cell_type": "code",
    "source": "df_gun.head(5)",
-   "execution_count": 3,
+   "execution_count": 4,
    "outputs": [
     {
+     "output_type": "execute_result",
+     "execution_count": 4,
      "data": {
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>month</th>\n      <th>state</th>\n      <th>permit</th>\n      <th>permit_recheck</th>\n      <th>handgun</th>\n      <th>long_gun</th>\n      <th>other</th>\n      <th>multiple</th>\n      <th>admin</th>\n      <th>prepawn_handgun</th>\n      <th>...</th>\n      <th>returned_other</th>\n      <th>rentals_handgun</th>\n      <th>rentals_long_gun</th>\n      <th>private_sale_handgun</th>\n      <th>private_sale_long_gun</th>\n      <th>private_sale_other</th>\n      <th>return_to_seller_handgun</th>\n      <th>return_to_seller_long_gun</th>\n      <th>return_to_seller_other</th>\n      <th>totals</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>2017-09</td>\n      <td>Alabama</td>\n      <td>16717.0</td>\n      <td>0.0</td>\n      <td>5734.0</td>\n      <td>6320.0</td>\n      <td>221.0</td>\n      <td>317</td>\n      <td>0.0</td>\n      <td>15.0</td>\n      <td>...</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>9.0</td>\n      <td>16.0</td>\n      <td>3.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>3.0</td>\n      <td>32019</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>2017-09</td>\n      <td>Alaska</td>\n      <td>209.0</td>\n      <td>2.0</td>\n      <td>2320.0</td>\n      <td>2930.0</td>\n      <td>219.0</td>\n      <td>160</td>\n      <td>0.0</td>\n      <td>5.0</td>\n      <td>...</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>17.0</td>\n      <td>24.0</td>\n      <td>1.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>6303</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>2017-09</td>\n      <td>Arizona</td>\n      <td>5069.0</td>\n      <td>382.0</td>\n      <td>11063.0</td>\n      <td>7946.0</td>\n      <td>920.0</td>\n      <td>631</td>\n      <td>0.0</td>\n      <td>13.0</td>\n      <td>...</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>38.0</td>\n      <td>12.0</td>\n      <td>2.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>28394</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>2017-09</td>\n      <td>Arkansas</td>\n      <td>2935.0</td>\n      <td>632.0</td>\n      <td>4347.0</td>\n      <td>6063.0</td>\n      <td>165.0</td>\n      <td>366</td>\n      <td>51.0</td>\n      <td>12.0</td>\n      <td>...</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>13.0</td>\n      <td>23.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>2.0</td>\n      <td>1.0</td>\n      <td>17747</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>2017-09</td>\n      <td>California</td>\n      <td>57839.0</td>\n      <td>0.0</td>\n      <td>37165.0</td>\n      <td>24581.0</td>\n      <td>2984.0</td>\n      <td>0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>...</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>123506</td>\n    </tr>\n  </tbody>\n</table>\n<p>5 rows × 27 columns</p>\n</div>",
-      "text/plain": "     month       state   permit  permit_recheck  handgun  long_gun   other  \\\n0  2017-09     Alabama  16717.0             0.0   5734.0    6320.0   221.0   \n1  2017-09      Alaska    209.0             2.0   2320.0    2930.0   219.0   \n2  2017-09     Arizona   5069.0           382.0  11063.0    7946.0   920.0   \n3  2017-09    Arkansas   2935.0           632.0   4347.0    6063.0   165.0   \n4  2017-09  California  57839.0             0.0  37165.0   24581.0  2984.0   \n\n   multiple  admin  prepawn_handgun  ...  returned_other  rentals_handgun  \\\n0       317    0.0             15.0  ...             0.0              0.0   \n1       160    0.0              5.0  ...             0.0              0.0   \n2       631    0.0             13.0  ...             0.0              0.0   \n3       366   51.0             12.0  ...             0.0              0.0   \n4         0    0.0              0.0  ...             0.0              0.0   \n\n   rentals_long_gun  private_sale_handgun  private_sale_long_gun  \\\n0               0.0                   9.0                   16.0   \n1               0.0                  17.0                   24.0   \n2               0.0                  38.0                   12.0   \n3               0.0                  13.0                   23.0   \n4               0.0                   0.0                    0.0   \n\n   private_sale_other  return_to_seller_handgun  return_to_seller_long_gun  \\\n0                 3.0                       0.0                        0.0   \n1                 1.0                       0.0                        0.0   \n2                 2.0                       0.0                        0.0   \n3                 0.0                       0.0                        2.0   \n4                 0.0                       0.0                        0.0   \n\n   return_to_seller_other  totals  \n0                     3.0   32019  \n1                     0.0    6303  \n2                     0.0   28394  \n3                     1.0   17747  \n4                     0.0  123506  \n\n[5 rows x 27 columns]"
+      "text/plain": "     month       state   permit  permit_recheck  handgun  long_gun   other  \\\n0  2017-09     Alabama  16717.0             0.0   5734.0    6320.0   221.0   \n1  2017-09      Alaska    209.0             2.0   2320.0    2930.0   219.0   \n2  2017-09     Arizona   5069.0           382.0  11063.0    7946.0   920.0   \n3  2017-09    Arkansas   2935.0           632.0   4347.0    6063.0   165.0   \n4  2017-09  California  57839.0             0.0  37165.0   24581.0  2984.0   \n\n   multiple  admin  prepawn_handgun  ...  returned_other  rentals_handgun  \\\n0       317    0.0             15.0  ...             0.0              0.0   \n1       160    0.0              5.0  ...             0.0              0.0   \n2       631    0.0             13.0  ...             0.0              0.0   \n3       366   51.0             12.0  ...             0.0              0.0   \n4         0    0.0              0.0  ...             0.0              0.0   \n\n   rentals_long_gun  private_sale_handgun  private_sale_long_gun  \\\n0               0.0                   9.0                   16.0   \n1               0.0                  17.0                   24.0   \n2               0.0                  38.0                   12.0   \n3               0.0                  13.0                   23.0   \n4               0.0                   0.0                    0.0   \n\n   private_sale_other  return_to_seller_handgun  return_to_seller_long_gun  \\\n0                 3.0                       0.0                        0.0   \n1                 1.0                       0.0                        0.0   \n2                 2.0                       0.0                        0.0   \n3                 0.0                       0.0                        2.0   \n4                 0.0                       0.0                        0.0   \n\n   return_to_seller_other  totals  \n0                     3.0   32019  \n1                     0.0    6303  \n2                     0.0   28394  \n3                     1.0   17747  \n4                     0.0  123506  \n\n[5 rows x 27 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>month</th>\n      <th>state</th>\n      <th>permit</th>\n      <th>permit_recheck</th>\n      <th>handgun</th>\n      <th>long_gun</th>\n      <th>other</th>\n      <th>multiple</th>\n      <th>admin</th>\n      <th>prepawn_handgun</th>\n      <th>...</th>\n      <th>returned_other</th>\n      <th>rentals_handgun</th>\n      <th>rentals_long_gun</th>\n      <th>private_sale_handgun</th>\n      <th>private_sale_long_gun</th>\n      <th>private_sale_other</th>\n      <th>return_to_seller_handgun</th>\n      <th>return_to_seller_long_gun</th>\n      <th>return_to_seller_other</th>\n      <th>totals</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>2017-09</td>\n      <td>Alabama</td>\n      <td>16717.0</td>\n      <td>0.0</td>\n      <td>5734.0</td>\n      <td>6320.0</td>\n      <td>221.0</td>\n      <td>317</td>\n      <td>0.0</td>\n      <td>15.0</td>\n      <td>...</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>9.0</td>\n      <td>16.0</td>\n      <td>3.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>3.0</td>\n      <td>32019</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>2017-09</td>\n      <td>Alaska</td>\n      <td>209.0</td>\n      <td>2.0</td>\n      <td>2320.0</td>\n      <td>2930.0</td>\n      <td>219.0</td>\n      <td>160</td>\n      <td>0.0</td>\n      <td>5.0</td>\n      <td>...</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>17.0</td>\n      <td>24.0</td>\n      <td>1.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>6303</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>2017-09</td>\n      <td>Arizona</td>\n      <td>5069.0</td>\n      <td>382.0</td>\n      <td>11063.0</td>\n      <td>7946.0</td>\n      <td>920.0</td>\n      <td>631</td>\n      <td>0.0</td>\n      <td>13.0</td>\n      <td>...</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>38.0</td>\n      <td>12.0</td>\n      <td>2.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>28394</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>2017-09</td>\n      <td>Arkansas</td>\n      <td>2935.0</td>\n      <td>632.0</td>\n      <td>4347.0</td>\n      <td>6063.0</td>\n      <td>165.0</td>\n      <td>366</td>\n      <td>51.0</td>\n      <td>12.0</td>\n      <td>...</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>13.0</td>\n      <td>23.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>2.0</td>\n      <td>1.0</td>\n      <td>17747</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>2017-09</td>\n      <td>California</td>\n      <td>57839.0</td>\n      <td>0.0</td>\n      <td>37165.0</td>\n      <td>24581.0</td>\n      <td>2984.0</td>\n      <td>0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>...</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>123506</td>\n    </tr>\n  </tbody>\n</table>\n<p>5 rows × 27 columns</p>\n</div>"
      },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+     "metadata": {}
     }
    ]
   },
